--- a/roles/python/tasks/main.yml
+++ b/roles/python/tasks/main.yml
@@ -1,4 +1,3 @@
-
   - name: Update and upgrade apt packages
     become: true
     apt:
@@ -7,11 +6,34 @@
   - name: Install Python
     apt:
       name: python3
+      state: present
 
   - name: Install PIP
     apt:
       name: python-pip
+      state: present
 
   - name: Install VirtualEnv
     apt:
       name: virtualenv
+      state: present
+
+  - name: Install Flask-Cors
+    pip:
+      name: flask-cors
+      state: present
+
+  - name: Install NPM
+    apt:
+      name: npm
+      state: present
+
+  - name: Install @vue/cli
+    npm:
+      name: "@vue/cli"
+      global: true
+
+  - name: Install vue-resource
+    npm: 
+      name: vue-resource
+      global: true
