--- a/roles/python/tasks/main.yml
+++ b/roles/python/tasks/main.yml
@@ -11,7 +11,7 @@
 
   - name: Install PIP
     apt:
-      name: python3-pip
+      name: python-pip
       state: present
 
   - name: Install VirtualEnv
