--- a/roles/python/tasks/main.yml
+++ b/roles/python/tasks/main.yml
@@ -7,6 +7,12 @@
     apt:
       name: python3
       state: present
+      
+  - name: Install Python
+    apt:
+      name: python3-pip
+      state: present
+  
 
   - name: Install VirtualEnv
     pip:
