--- a/roles/python/tasks/main.yml
+++ b/roles/python/tasks/main.yml
@@ -8,7 +8,7 @@
       name: python3
       state: present
       
-  - name: Install Python
+  - name: Install PIP
     apt:
       name: python3-pip
       state: present
