--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -1,41 +1,30 @@
-  - name: install MySQL Python
-    apt:
-      name: python-mysqldb
-      state: present
+  ---
 
-  - name: install MySQL
-    apt:
-      name: mysql-server
-      state: present
-
-  - name: install mySQL connector
-    pip:
-      name: mysql-connector
-      executable: pip3
-      state: present
-
-  - name: Start MySQL service
+  - name: install PostgreSQL
     sudo: yes
-    service:
-      name: mysql
-      state: started
-      enabled: true
+    apt:
+      name: postgresql postgresql-contrib
+      state: present
 
-  - name: update mysql root password
-    sudo: yes
-    mysql_user:
-      name: root
-      password: mysqlpasswd
-      login_user: root
-      login_password: mysqlpasswd
-      check_implicit_admin: yes
-      priv: "*.*:ALL,GRANT"
+  - name: Ensure the PostgreSQL service is running
+    service: 
+      name: postgresql 
+      state: started 
+      enabled: yes
 
-  - name: copy Python database script
-    copy:
-      src: DBCreateScript.py
-      dest: /vagrant
+  - name: Ensure database is created
+    sudo_user: postgres
+    postgresql_db: name= snailRacing
+              encoding='UTF-8'
+              lc_collate='en_US.UTF-8'
+              lc_ctype='en_US.UTF-8'
+              template='template0'
+              state=present
 
-  - name: run Python database create script
-    become: true
-    shell: python3 /vagrant/DBCreateScript.py
+  - name: Ensure user has access to the database
+    sudo_user: postgres
+    postgresql_user: db= snailRacing
+                name=root
+                password=postgresqlpasswd
+                priv=ALL
+                state=present
