--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -13,16 +13,11 @@
 
 - name: Ensure database is created
   sudo_user: postgres
-  postgresql_db: name= snailRacing
-            encoding='UTF-8'
-            lc_collate='en_US.UTF-8'
-            lc_ctype='en_US.UTF-8'
-            template='template0'
-            state=present
+  postgresql_db: name=snailRacing state=present
 
 - name: Ensure user has access to the database
   sudo_user: postgres
-  postgresql_user: db= snailRacing
+  postgresql_user: db=snailRacing
               name=root
               password=postgresqlpasswd
               priv=ALL
