--- a/roles/mysql/tasks/main.yml
+++ b/roles/mysql/tasks/main.yml
@@ -1,9 +1,12 @@
 ---
 - name: install PostgreSQL
   sudo: yes
-  apt:
-    name: postgresql postgresql-contrib
-    state: present
+  apt: name={{ item }} update_cache=true state=present
+  with_items:
+    - postgresql
+    - postgresql-contrib
+    - libpq-dev
+    - python-psycopg2
 
 - name: Ensure the PostgreSQL service is running
   service: 
