--- a/roles/postgreSQL/tasks/main.yml
+++ b/roles/postgreSQL/tasks/main.yml
@@ -25,7 +25,26 @@
   become_user: postgres
   postgresql_user:
     name: "root"
-    password: "mysqlpasswd"
+    password: "psqlpass"
+
+- name: Create postgres database
+  become_user: postgres
+  postgresql_db:
+    name: "snailRacing"
+    owner: "root"
+    template: template0
+    encoding: UTF8
+    lc_collate: 'en_US.UTF-8'
+    lc_ctype: 'en_US.UTF-8'  
+
+- name: Ensure user has access to database
+  become: yes
+  become_user: postgres
+  postgresql_privs:
+    db: "snailRacing"
+    role: "root"
+    objs: ALL_IN_SCHEMA
+    privs: ALL
     
 - name: copy Python database script
   copy:
@@ -36,11 +55,4 @@
   become: true
   shell: python3 /vagrant/DBCreateScript.py
 
-- name: Ensure user has access to database
-  become: yes
-  become_user: postgres
-  postgresql_privs:
-    db: snailRacing
-    role: root
-    objs: ALL_IN_SCHEMA
-    privs: ALL
+
