--- a/roles/postgreSQL/tasks/main.yml
+++ b/roles/postgreSQL/tasks/main.yml
@@ -6,13 +6,13 @@
     - postgresql
     - postgresql-contrib
     - libpq-dev
-    - python3-psycopg2
+    - python-psycopg2
 
-- name: install psycopg2
-  pip:
-    name: psycopg2
-    executable: pip3
-    state: present
+# - name: install psycopg2
+#   pip:
+#     name: psycopg2
+#     executable: pip3
+#     state: present
 
 - name: Ensure the PostgreSQL service is running
   service: 
@@ -35,7 +35,7 @@
     template: template0
     encoding: UTF8
     lc_collate: 'en_US.UTF-8'
-    lc_ctype: 'en_US.UTF-8'  
+    lc_ctype: 'en_US.UTF-8'
 
 - name: Ensure user has access to database
   become: yes
