--- a/roles/python/tasks/main.yml
+++ b/roles/python/tasks/main.yml
@@ -8,11 +8,25 @@
       name: python3
       state: present
       
-  - name: Install PIP
+  - name: Install PIP3
     apt:
       name: python3-pip
       state: present
-  
+
+  - name: Install PIP2
+    apt:
+      name: python-pip
+      state: present
+
+  - name: Install Flask
+    pip:
+      name: Flask
+      executable: pip
+
+  - name: Install Flask-Cors
+    pip:
+      name: flask-cors
+      executable: pip
 
   - name: Install VirtualEnv
     pip:
