--- a/roles/postgreSQL/tasks/main.yml
+++ b/roles/postgreSQL/tasks/main.yml
@@ -50,5 +50,8 @@
 - name: run Python database create script
   become: true
   shell: python3 /vagrant/DBCreateScript.py
+- name: run Python database insert script
+  become: true
+  shell: python3 /vagrant/insert_db.py
 
 
