--- a/roles/postgreSQL/tasks/main.yml
+++ b/roles/postgreSQL/tasks/main.yml
@@ -25,7 +25,7 @@
 
 - name: Drop database if exists
   become: true
-  shell: dropdb snailRacing
+  shell: dropdb --if-exists snailRacing
 
 - name: Create postgres database
   become_user: postgres
