--- a/roles/postgreSQL/tasks/main.yml
+++ b/roles/postgreSQL/tasks/main.yml
@@ -59,17 +59,17 @@
 #  become: true
 #  shell: python3 /vagrant/insert_db.py
 
-#- name: run Python database insert script with open round
-#  become: true
-#  shell: python3 /vagrant/open_insert_db.py
+- name: run Python database insert script with open round
+  become: true
+  shell: python3 /vagrant/open_insert_db.py
 
 #- name: run Python database insert script with future round
 #  become: true
 #  shell: python3 /vagrant/future_insert_db.py
 
-- name: run Python database insert script with inflight round
-  become: true
-  shell: python3 /vagrant/inflight_insert_db.py
+#- name: run Python database insert script with inflight round
+#  become: true
+#  shell: python3 /vagrant/inflight_insert_db.py
 
 #- name: run Python database insert script with no future round
 #  become: true
