sql for closed rounds

--- a/roles/postgreSQL/tasks/main.yml
+++ b/roles/postgreSQL/tasks/main.yml
@@ -55,6 +55,10 @@
   become: true
   shell: python3 /vagrant/DBCreateScript.py
 
+- name: run Python database insert script with closed rounds
+  become: true
+  shell: python3 /vagrant/closed_rounds.py
+
 #- name: run Python database insert script
 #  become: true
 #  shell: python3 /vagrant/insert_db.py
@@ -67,9 +71,9 @@
 #  become: true
 #  shell: python3 /vagrant/future_insert_db.py
 
-- name: run Python database insert script with inflight round
-  become: true
-  shell: python3 /vagrant/inflight_insert_db.py
+# - name: run Python database insert script with inflight round
+#   become: true
+#   shell: python3 /vagrant/inflight_insert_db.py
 
 #- name: run Python database insert script with no future round
 #  become: true
